--- a/index.html
+++ b/index.html
@@ -102,6 +102,82 @@
             </div>
         </section>
     </main>
+    <!-- Lates Course  -->
+
+    <section class="course">
+        <div class="course-content container">
+            <h2 class="player-heading">Top Course</h2>
+            <div class="d-flex">
+                <div class="course-item">
+                    <img src="./images/courses/course-1.png" alt="">
+                    <div class="course-text">
+                        <h2>React - The Complete</h2>
+                        <h2>Guide 2020</h2>
+                        <p>Reed Krakoff</p>
+                    </div>
+                    <div class="course-rating">
+                        <div class="course-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate">4.5</div>
+                        <div class="clock">
+                            <img src="./images/icons/clock.png" alt="">
+                            <span>01:30hr</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="course-item">
+                    <img src="./images/courses/course-2.png" alt="">
+                    <div class="course-text">
+                        <h2>React - The Complete</h2>
+                        <h2>Guide 2020</h2>
+                        <p>Reed Krakoff</p>
+                    </div>
+                    <div class="course-rating">
+                        <div class="course-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate">4.5</div>
+                        <div class="clock">
+                            <img src="./images/icons/clock.png" alt="">
+                            <span>01:30hr</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="course-item">
+                    <img src="./images/courses/course-3.png" alt="">
+                    <div class="course-text">
+                        <h2>React - The Complete</h2>
+                        <h2>Guide 2020</h2>
+                        <p>Reed Krakoff</p>
+                    </div>
+                    <div class="course-rating">
+                        <div class="course-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate">4.5</div>
+                        <div class="clock">
+                            <img src="./images/icons/clock.png" alt="">
+                            <span>01:30hr</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
