--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                 <div class="course-item">
                     <img src="./images/courses/course-2.png" alt="">
                     <div class="course-text">
-                        <h2>React - The Complete</h2>
-                        <h2>Guide 2020</h2>
-                        <p>Reed Krakoff</p>
+                        <h2>Powerpoint 2020 </h2>
+                        <h2>Master Powerpoint Cour</h2>
+                        <p>Walter Scott</p>
                     </div>
                     <div class="course-rating">
                         <div class="course-icon">
@@ -155,8 +155,8 @@
                 <div class="course-item">
                     <img src="./images/courses/course-3.png" alt="">
                     <div class="course-text">
-                        <h2>React - The Complete</h2>
-                        <h2>Guide 2020</h2>
+                        <h2>he Complete JavaScript </h2>
+                        <h2>Course 2020</h2>
                         <p>Reed Krakoff</p>
                     </div>
                     <div class="course-rating">
@@ -170,7 +170,7 @@
                         <div class="rate">4.5</div>
                         <div class="clock">
                             <img src="./images/icons/clock.png" alt="">
-                            <span>01:30hr</span>
+                            <span class="time">01:30 hr</span>
                         </div>
                     </div>
                 </div>
