course section some add

--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
                         </div>
                         <div class="rate">4.5</div>
                         <div class="clock">
-                            <img src="./images/icons/clock.png" alt="">
-                            <span>01:30hr</span>
+                            <i class="fa-regular fa-clock"></i>
+                            01:30hr
+                            <!-- <span>01:30hr</span> -->
                         </div>
                     </div>
                 </div>
@@ -147,8 +148,9 @@
                         </div>
                         <div class="rate">4.5</div>
                         <div class="clock">
-                            <img src="./images/icons/clock.png" alt="">
-                            <span>01:30hr</span>
+                            <i class="fa-regular fa-clock"></i>
+                            01:30hr
+                            <!-- <span>01:30hr</span> -->
                         </div>
                     </div>
                 </div>
@@ -169,8 +171,9 @@
                         </div>
                         <div class="rate">4.5</div>
                         <div class="clock">
-                            <img src="./images/icons/clock.png" alt="">
-                            <span class="time">01:30 hr</span>
+                            <i class="fa-regular fa-clock"></i>
+                            01:30hr
+                            <!-- <p class="time">01:30 hr</p> -->
                         </div>
                     </div>
                 </div>
