--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             </div>
         </section>
     </main>
+
     <!-- Lates Course  -->
 
     <section class="course">
@@ -127,7 +128,6 @@
                         <div class="clock">
                             <i class="fa-regular fa-clock"></i>
                             01:30hr
-                            <!-- <span>01:30hr</span> -->
                         </div>
                     </div>
                 </div>
@@ -150,7 +150,6 @@
                         <div class="clock">
                             <i class="fa-regular fa-clock"></i>
                             01:30hr
-                            <!-- <span>01:30hr</span> -->
                         </div>
                     </div>
                 </div>
@@ -173,14 +172,25 @@
                         <div class="clock">
                             <i class="fa-regular fa-clock"></i>
                             01:30hr
-                            <!-- <p class="time">01:30 hr</p> -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </section>
 </body>
+
+<footer class="footer">
+    <div class="footer-content">
+        <h2>This is leader board web page</h2>
+        <p class="fotter-text">This course are beutiful. If we get this course, we will learn a lot of thing.</p>
+        <div class="social-icon">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </div>
+</footer>
 
 </html>
