media query added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="player">
                     <img src="./images/players/player-4.png" alt="player-4">
-                    <h4 class="player-name">Shahajul Karim</h4>
+                    <h4 class="player-name">Sha-Alam</h4>
                 </div>
                 <div class="player">
                     <img src="./images/players/player-5.png" alt="player-5">
