--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="course-content container">
             <h2 class="player-heading">Top Course</h2>
             <div class="d-flex">
-                <div class="course-item">
+                <div class="course-item course-width1">
                     <img src="./images/courses/course-1.png" alt="">
                     <div class="course-text">
                         <h2>React - The Complete</h2>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="course-item">
+                <div class="course-item course-width2">
                     <img src="./images/courses/course-2.png" alt="">
                     <div class="course-text">
                         <h2>Powerpoint 2020 </h2>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="course-item">
+                <div class="course-item course-width3">
                     <img src="./images/courses/course-3.png" alt="">
                     <div class="course-text">
                         <h2>he Complete JavaScript </h2>
